# ophidia-io-server

./: .gitignore  AUTHORS.md  HISTORY.md  Makefile.am  NOTICE.md  README.md  bootstrap  configure.ac
docker/: Dockerfile  entrypoint.sh
etc/: oph_device_list.in  oph_ioserver.conf  oph_primitives_list.in
src/: Makefile.am
src/client/: Makefile.am  oph_io_client.c  oph_io_client_interface.c  oph_io_client_interface.h  oph_io_client_show.c  oph_io_client_test.c
src/common/: Makefile.am  debug.c  debug.h  hashtbl.c  hashtbl.h  oph-lib-binary-io (copy).c  oph-lib-binary-io.c  oph-lib-binary-io.h  oph_license.h  oph_server_confs.c  oph_server_confs.h  oph_server_utility.c  oph_server_utility.h  taketime.h
src/devices/: MEMORY_device.c  MEMORY_device.h  Makefile.am  PMEMORY_device.c  PMEMORY_device.h
src/iostorage/: Makefile.am  oph_iostorage_client.c  oph_iostorage_data.c  oph_iostorage_data.h  oph_iostorage_interface.c  oph_iostorage_interface.h  oph_iostorage_log_error_codes.h
src/metadb/: Makefile.am  oph_metadb_auxiliary.c  oph_metadb_auxiliary.h  oph_metadb_client.c  oph_metadb_interface.c  oph_metadb_interface.h  oph_metadb_log_error_codes.h  oph_metadb_reader.c
src/metadb/execs/: Makefile.am  oph_metadb_client.c  oph_metadb_reader.c
src/network/: Makefile.am  oph_network.c  oph_network.h
src/query_engine/: Makefile.am  oph_query_client.c  oph_query_engine.c  oph_query_engine.h  oph_query_engine_language.h  oph_query_engine_log_error_codes.h  oph_query_expression_client.c  oph_query_expression_evaluator.c  oph_query_expression_evaluator.h  oph_query_expression_functions.c  oph_query_expression_functions.h  oph_query_expression_lexer.c  oph_query_expression_lexer.h  oph_query_expression_lexer.l  oph_query_expression_parser.c  oph_query_expression_parser.h  oph_query_expression_parser.y  oph_query_parser.c  oph_query_parser.h  oph_query_plugin_executor.c  oph_query_plugin_executor.h  oph_query_plugin_loader.c  oph_query_plugin_loader.h
src/query_engine/expression_evaluator/: Makefile.am  oph_query_expression_client.c  oph_query_expression_evaluator.c  oph_query_expression_evaluator.h  oph_query_expression_functions.c  oph_query_expression_functions.h  oph_query_expression_lexer.c  oph_query_expression_lexer.h  oph_query_expression_lexer.l  oph_query_expression_parser.c  oph_query_expression_parser.h  oph_query_expression_parser.y
src/server/: Makefile.am  oph_io_server.c  oph_io_server_esdm.c  oph_io_server_interface.h  oph_io_server_nc.c  oph_io_server_nc_load.c  oph_io_server_query.c  oph_io_server_query_blocks.c  oph_io_server_query_engine.c  oph_io_server_query_manager.h  oph_io_server_query_procedures.c  oph_io_server_test.c  oph_io_server_thread.c  oph_io_server_thread.h
src/server/execs/: Makefile.am  oph_io_server.c  oph_io_server_nc_load.c  oph_io_server_thread.c
